Can't bake second dynamic paint canvas to image sequence #66587

Closed
opened 2019-07-09 01:16:19 +02:00 by zzzzzig · 4 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Radeon (TM) RX 470 Graphics ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15027.1003

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 20:48, hash: 96f5918407
Worked: (optional)

Short description of error
When there are more than one canvases added to an object's dynamic paint system, It is only possible to bake image sequences for the first one. On all canvases, the bake button tries to bake the first canvas in the list. This is shown by setting the first to vertex color format, the second to image sequence, and trying to bake it. An error pops up saying "Cannot bake non-'image sequence' formats."

Exact steps for others to reproduce the error
Simple Example:

Open new blend file

select default cube

in physics tab add dynamic paint

set type to canvas

leave canvas 1 as vertex format

click the plus to add a second canvas

set second canvas to image sequence format

press the bake image sequence button

it should show an error saying "Cannot bake non-'image sequence' formats"

I have attached a simple example of being unable to bake the second canvas. Anytime the bake button is pressed for the second canvas, it bakes the first instead.
DynamicPaintTesting.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Radeon (TM) RX 470 Graphics ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15027.1003 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 20:48, hash: `96f5918407` Worked: (optional) **Short description of error** When there are more than one canvases added to an object's dynamic paint system, It is only possible to bake image sequences for the first one. On all canvases, the bake button tries to bake the first canvas in the list. This is shown by setting the first to vertex color format, the second to image sequence, and trying to bake it. An error pops up saying "Cannot bake non-'image sequence' formats." **Exact steps for others to reproduce the error** Simple Example: # Open new blend file # select default cube # in physics tab add dynamic paint # set type to canvas # leave canvas 1 as vertex format # click the plus to add a second canvas # set second canvas to image sequence format # press the bake image sequence button # it should show an error saying "Cannot bake non-'image sequence' formats" I have attached a simple example of being unable to bake the second canvas. Anytime the bake button is pressed for the second canvas, it bakes the first instead. [DynamicPaintTesting.blend](https://archive.blender.org/developer/F7577827/DynamicPaintTesting.blend)
Author

Added subscriber: @zzzzzig-2

Added subscriber: @zzzzzig-2
zzzzzig changed title from Can't bake second dynamic paint surface to image sequence to Can't bake second dynamic paint canvas to image sequence 2019-07-09 02:31:31 +02:00
Sebastian Parborg self-assigned this 2019-07-10 16:15:08 +02:00

I've posted a fix here: D5220

I've posted a fix here: [D5220](https://archive.blender.org/developer/D5220)

This issue was referenced by 8fa50b522a

This issue was referenced by 8fa50b522a10a3d8f2546d79410cfed35660e835

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66587
No description provided.